--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,6 @@ h1 {
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  /* gap: 50px; tamanho da caixa geral */
 }
 
 .divSelects {
@@ -74,7 +73,6 @@ h1 {
   border-color: #ddd;
   border-radius: 5px;
   box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.2); 
-  
 }
 
 .divTextareas {
@@ -84,6 +82,7 @@ h1 {
   gap: 10px;
   border-radius: 5px;
 }
+
 #textareaTo {
   width: 300px;
   height: 150px;
@@ -95,8 +94,8 @@ h1 {
   color: #666; /* Define uma cor de texto para torná-la visualmente distinta */
   resize: vertical;
 }
-#textareaFrom
-{
+
+#textareaFrom {
   width: 300px;
   height: 150px;
   font-size: 16px;
@@ -120,7 +119,7 @@ h1 {
 }
 
 #swap-languages-button {
-  background-color:  #1c61c2;
+  background-color: #1c61c2;
   color: white;
   padding: 10px 20px;
   width: 100px;
@@ -131,10 +130,7 @@ h1 {
   cursor: pointer;
   transform: scale(0.8);
   box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.2); 
-
 }
-
-
 
 button {
   padding: 10px;
@@ -149,8 +145,9 @@ button {
   letter-spacing: 1px;
 }
 
-#btn-ouvir1 {
-padding: 10px;
+#btn-ouvir1,
+#btn-ouvir2 {
+  padding: 10px;
   font-size: 18px;
   border: none;
   background-color: #1c61c2;
@@ -161,17 +158,6 @@ padding: 10px;
   margin-top: 10px;
   letter-spacing: 1px;
 }
-#btn-ouvir2 {padding: 10px;
-  font-size: 18px;
-  border: none;
-  background-color: #1c61c2;
-  color: white;
-  border-radius: 5px;
-  font-weight: 600;
-  cursor: pointer;
-  margin-top: 10px;
-  letter-spacing: 1px;}
-
 
 button:hover {
   opacity: 0.9;
@@ -195,3 +181,38 @@ button:hover {
 .footer a:hover {
   text-decoration: underline;
 }
+
+/* Responsive Styles */
+@media screen and (max-width: 768px) {
+  .content {
+    padding: 20px;
+  }
+
+  .divSelects {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .selectFrom,
+  .selectTo {
+    width: 100%;
+    max-width: 300px;
+    margin-bottom: 10px;
+  }
+
+  .divTextareas {
+    flex-direction: column;
+  }
+
+  #textareaFrom,
+  #textareaTo {
+    width: 100%;
+    max-width: 300px;
+  }
+
+  #btnTranslate {
+    width: 100%;
+  }
+}
+
+/* You can add more media queries for further customization on different screen sizes if needed */
