--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #4392F1;
+  background-color: #3672bb;
   color: white;
 }
 
@@ -53,6 +53,7 @@ h1 {
 
 
 .content {
+ 
   padding: 15px;
   box-shadow: 0 1px 2px #0003; /*esse bloco e para a borda branca em volta dos elementos */
   background-color: white;
@@ -234,24 +235,29 @@ button:hover {
   opacity: 0.9;
 }
 
-.footer {
-  background-color: rgba(255, 255, 255, 0.8);
+footer {
+ 
+  background-color: rgba(67, 146, 241, 1); 
   text-align: center;
   padding: 20px;
   border-top: 1px solid #ccc;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
+
 
 .footer a {
   background-color: #f0f0f0;
   padding: 10px;
-  position: absolute;
-  bottom: 0;
+  display: block;
   width: 100%;
 }
 
 .footer a:hover {
   text-decoration: underline;
 }
+
 
 /* Responsive Styles */
 @media screen and (max-width: 768) {
