--- a/styles.css
+++ b/styles.css
@@ -47,13 +47,11 @@ body::before {
 h1 {
   font-size: 56px; /* Definir  o tamanho */
   letter-spacing: 4px;
-  text-align: center;  /*remove  */
+  text-align: center; /*remove  */
   color: white; /* Mantendo a cor do título como branco */
 }
 
-
 .content {
- 
   padding: 15px;
   box-shadow: 0 1px 2px #0003; /*esse bloco e para a borda branca em volta dos elementos */
   background-color: white;
@@ -70,7 +68,6 @@ h1 {
   gap: 10px;
 }
 
-
 .textarea-container {
   position: relative;
   padding: 40px;
@@ -79,8 +76,6 @@ h1 {
   display: flex;
   flex-direction: column;
 }
-
-
 
 .selectFrom,
 .selectTo {
@@ -101,9 +96,7 @@ h1 {
   border-radius: 5px;
   flex-direction: row;
   align-items: center;
- 
 }
-
 
 #textareaTo {
   width: 300px;
@@ -152,12 +145,12 @@ textarea {
 }
 
 #swap-languages-button {
-  background-color: #4392F1;
-  color: white;
+  background-color: transparent;
+  color: #4392f1;
   padding: 10px 20px;
   width: 100px;
   height: 99px;
-  font-size: 14px;
+  font-size: 23px;
   border: none;
   border-radius: 1000px;
   cursor: pointer;
@@ -170,7 +163,7 @@ textarea {
   padding: 10px;
   font-size: 15px;
   border: none;
-  background-color: #4392F1;
+ background-color: #4392f1;
   color: white;
   border-radius: 5px;
   font-weight: 600;
@@ -190,12 +183,12 @@ textarea {
   padding: 10px;
   font-size: 18px;
   border: none;
-  background-color: #4392F1;
-  color: white;
-  border-radius: 100px;
-  font-weight: 600;
+  background-color: transparent;
+  color: #4392f1;
+  border-radius: 50%;
   cursor: pointer;
   letter-spacing: 1px;
+  
 }
 
 #btn-ouvir2 {
@@ -205,47 +198,84 @@ textarea {
   padding: 10px;
   font-size: 18px;
   border: none;
-  background-color: #4392F1;
-  color: white;
-  border-radius: 100px;
-  font-weight: 600;
+  background-color: transparent;
+  color: #4392f1;
+  border-radius: 50%;
   cursor: pointer;
   margin-top: 10px;
-  letter-spacing: 1px;
 }
 
 #btn-microphone {
   position: absolute; /* posicao do botao */
-  bottom: 5px;
-  left: 70px;
+  bottom: 4px;
+  left: 55px;
   width: 50px; /* Largura do botão */
   height: 50px; /* Altura do botão */
   padding: 10px;
   font-size: 18px;
   border: none;
-  background-color: #4392F1;
-  color: white;
+  background-color: transparent;
+  color: #4392f1;
   border-radius: 50%; /* Tornar o botão circular */
-  font-weight: 600;
   cursor: pointer;
-  letter-spacing: 1px;
 }
 
-button:hover {
-  opacity: 0.9;
+#btn-limpar {
+position: absolute; /* posicao do botao */
+  bottom: 100px;
+  left: 250px;
+  width: 50px; /* Largura do botão */
+  height: 50px; /* Altura do botão */
+  padding: 10px;
+  font-size: 18px;
+  border: none;
+  background-color: transparent;
+  color: #4392f1;
+  border-radius: 50%; /* Tornar o botão circular */
+  cursor: pointer;
+}
+
+.hover-button {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  position: relative;
+ /* box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.2);  fazer teste de usabiliade */
+  
+}
+
+.hover-button .button-name {
+  display: none;
+  background-color: #6ddcf0;
+  color: #333;
+  padding: 5px 10px;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
+  border-radius: 5px;
+  
+}
+
+.hover-button:hover .button-name {
+  display: block;
+  
 }
 
 footer {
- 
-  background-color: rgba(67, 146, 241, 1); 
+  background-color: rgba(67, 146, 241, 1);
   text-align: center;
   padding: 20px;
   border-top: 1px solid #ccc;
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: 100px; /* Defina a altura desejada para o rodapé em pixels */
 }
-
 
 .footer a {
   background-color: #f0f0f0;
@@ -258,28 +288,30 @@ footer {
   text-decoration: underline;
 }
 
-
-/* Responsive Styles */
-@media screen and (max-width: 768) {
+/* Estilos para dispositivos com largura menor que 768 pixels (celulares) */
+@media screen and (max-width: 768px) {
   .content {
-    padding: 90px;
+    /* Estilos para o conteúdo principal em celulares */
+    height: auto; /* Remover a altura fixa para que o conteúdo determine a altura */
+    padding: 20px; /* Ajuste o padding conforme necessário para celulares */
   }
-  @media screen and (min-width: 769px) {
-    /* Estilos para quando a largura da tela é maior que 768 pixels (tela deitada) */
-  }
+
   .divSelects {
+    /* Estilos para as divs contendo os selects em celulares */
     flex-direction: column;
     align-items: flex-start;
   }
 
   .selectFrom,
   .selectTo {
+    /* Estilos para os selects em celulares */
     width: 100%;
     max-width: 300px;
     margin-bottom: 10px;
   }
 
   .divTextareas {
-    position: relative;
+    /* Estilos para a div contendo os textareas em celulares */
+    position: static; /* Remover a posição relativa para ajuste ao conteúdo */
   }
 }
